# Macisstant

./: AppController.cpp  AppController.h  CMakeLists.txt  FileOperator.h  Main.qml  README.md  main.cpp
custom/components/: IconButton.qml  KbMacrosWindow.qml  KeyMacroInputField.qml  KeyTextInput.qml  MacroItem.qml  MainButton.qml  NumberTextInput.qml  PopupWindow.qml  SimpleTextInput.qml
